--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
 	"manifest_version": 3,
-	"name": "ANTI YT SHORTS - β",
-	"version": "2.2.1",
-	"description": "YouTubeのショートを非表示にする拡張",
+	"name": "Anti YouTube Shorts",
+	"version": "3.0.0",
+	"description": "YouTubeのShortsを非表示にして、あなたの大切な時間を守る拡張機能",
 	"icons": {
 		"16": "assets/icons/icon16.png",
 		"48": "assets/icons/icon48.png",
 		"128": "assets/icons/icon128.png"
 	},
-	"permissions": ["storage", "tabs", "scripting", "activeTab"],
+	"permissions": ["storage", "scripting", "activeTab"],
 	"host_permissions": ["*://*.youtube.com/*"],
 	"background": {
 		"service_worker": "background.js"
@@ -18,7 +18,8 @@
 		"default_icon": {
 			"16": "assets/icons/icon16.png",
 			"48": "assets/icons/icon48.png"
-		}
+		},
+		"default_title": "Anti YouTube Shorts"
 	},
 	"content_scripts": [
 		{
